FIND_PACKAGE(SWIG REQUIRED)
INCLUDE(${SWIG_USE_FILE})

IF(${CMAKE_VERSION} VERSION_LESS "3.12.0")
	FIND_PACKAGE(PythonInterp 3 REQUIRED)
	IF (${PYTHONINTERP_FOUND})
	    FIND_PACKAGE(PythonLibs "${PYTHON_VERSION_MAJOR}.${PYTHON_VERSION_MINOR}")
	ENDIF()
	INCLUDE_DIRECTORIES( ${PYTHON_INCLUDE_DIRS} )
ELSE()
	FIND_PACKAGE (Python COMPONENTS Interpreter Development)
	INCLUDE_DIRECTORIES( ${Python_INCLUDE_DIRS} )
ENDIF()

INCLUDE_DIRECTORIES(
    ${LEMON_INCLUDE_DIRS}
    ${CMAKE_CURRENT_SOURCE_DIR}
    ${PROJECT_SOURCE_DIR}/src
)

SET_SOURCE_FILES_PROPERTIES(openql.i PROPERTIES CPLUSPLUS ON)

SET_PROPERTY(SOURCE openql.i PROPERTY SWIG_FLAGS -castmode -modern -keyword -w511)
#WJV
# -modern is deprecated
# -keyword gives lots of warnings
#SET_PROPERTY(SOURCE openql.i PROPERTY SWIG_FLAGS -castmode)

IF (${CMAKE_VERSION} VERSION_LESS "3.8.0")
	SWIG_ADD_MODULE(openql python openql.i)
ELSE()
    SWIG_ADD_LIBRARY( openql
                      TYPE MODULE
                      LANGUAGE python
                      SOURCES openql.i
                    )
ENDIF()

IF (${CMAKE_SYSTEM_NAME} MATCHES "Darwin")
    SWIG_LINK_LIBRARIES(openql ql ${LEMON_LIBRARIES})
    SET_TARGET_PROPERTIES(_openql PROPERTIES LINK_FLAGS "-undefined dynamic_lookup")
ELSE()
    IF (${CMAKE_VERSION} VERSION_LESS "3.12.0")
        SWIG_LINK_LIBRARIES(openql ${PYTHON_LIBRARIES} ql ${LEMON_LIBRARIES})
    ELSE()
        SWIG_LINK_LIBRARIES(openql ${Python_LIBRARIES} ql ${LEMON_LIBRARIES})
    ENDIF()
ENDIF()
